--- a/002_Databases_and_SQL_for_Data_Science_with_Python/DB0201EN-Week3-1-2-Querying-v4-py.ipynb
+++ b/002_Databases_and_SQL_for_Data_Science_with_Python/DB0201EN-Week3-1-2-Querying-v4-py.ipynb
@@ -544,9 +544,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-python-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -558,7 +558,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.11.1"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "28f2305b25a46266d2107f35ec654cce54a87a51ee3528a88ab0a5bda9c875d0"
+   }
   }
  },
  "nbformat": 4,
