--- a/002_Databases_and_SQL_for_Data_Science_with_Python/DB0201EN-Week3-1-1-Connecting-v4-py.ipynb
+++ b/002_Databases_and_SQL_for_Data_Science_with_Python/DB0201EN-Week3-1-1-Connecting-v4-py.ipynb
@@ -306,7 +306,7 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -320,7 +320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.1"
   },
   "toc": {
    "base_numbering": 1,
@@ -334,6 +334,11 @@
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "28f2305b25a46266d2107f35ec654cce54a87a51ee3528a88ab0a5bda9c875d0"
+   }
   }
  },
  "nbformat": 4,
