files were added

--- a/004_Data_Visualization_with_Python/5_Peer_Graded_Assignment_Questions.ipynb
+++ b/004_Data_Visualization_with_Python/5_Peer_Graded_Assignment_Questions.ipynb
@@ -241,11 +241,248 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-10T08:19:25.389068Z",
-     "start_time": "2023-03-10T08:17:27.861449Z"
+     "start_time": "2023-04-06T09:39:21.652Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      " * Serving Flask app \"__main__\" (lazy loading)\n",
+      " * Environment: production\n",
+      "\u001b[31m   WARNING: This is a development server. Do not use it in a production deployment.\u001b[0m\n",
+      "\u001b[2m   Use a production WSGI server instead.\u001b[0m\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " * Running on http://127.0.0.1:8050/ (Press CTRL+C to quit)\n",
+      "127.0.0.1 - - [06/Apr/2023 12:39:37] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Apr/2023 12:39:37] \"GET /_dash-layout HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Apr/2023 12:39:37] \"GET /_dash-dependencies HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Apr/2023 12:39:37] \"GET /_dash-component-suites/dash/dcc/async-dropdown.js HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exception on /_dash-update-component [POST]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 2447, in wsgi_app\n",
+      "    response = self.full_dispatch_request()\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1952, in full_dispatch_request\n",
+      "    rv = self.handle_user_exception(e)\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1821, in handle_user_exception\n",
+      "    reraise(exc_type, exc_value, tb)\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\_compat.py\", line 39, in reraise\n",
+      "    raise value\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1950, in full_dispatch_request\n",
+      "    rv = self.dispatch_request()\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1936, in dispatch_request\n",
+      "    return self.view_functions[rule.endpoint](**req.view_args)\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\dash\\dash.py\", line 1273, in dispatch\n",
+      "    ctx.run(\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\dash\\_callback.py\", line 440, in add_context\n",
+      "    output_value = func(*func_args, **func_kwargs)  # %% callback invoked %%\n",
+      "  File \"C:\\Users\\hbpbn\\AppData\\Local\\Temp\\ipykernel_21392\\2481968748.py\", line 131, in get_graph\n",
+      "    df =  airline_data[airline_data['Year']==int(year)]\n",
+      "TypeError: int() argument must be a string, a bytes-like object or a number, not 'NoneType'\n",
+      "Exception on /_dash-update-component [POST]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 2447, in wsgi_app\n",
+      "    response = self.full_dispatch_request()\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1952, in full_dispatch_request\n",
+      "    rv = self.handle_user_exception(e)\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1821, in handle_user_exception\n",
+      "    reraise(exc_type, exc_value, tb)\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\_compat.py\", line 39, in reraise\n",
+      "    raise value\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1950, in full_dispatch_request\n",
+      "    rv = self.dispatch_request()\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1936, in dispatch_request\n",
+      "    return self.view_functions[rule.endpoint](**req.view_args)\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\dash\\dash.py\", line 1273, in dispatch\n",
+      "    ctx.run(\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\dash\\_callback.py\", line 440, in add_context\n",
+      "    output_value = func(*func_args, **func_kwargs)  # %% callback invoked %%\n",
+      "  File \"C:\\Users\\hbpbn\\AppData\\Local\\Temp\\ipykernel_21392\\2481968748.py\", line 131, in get_graph\n",
+      "    df =  airline_data[airline_data['Year']==int(year)]\n",
+      "TypeError: int() argument must be a string, a bytes-like object or a number, not 'NoneType'\n",
+      "Exception on /_dash-update-component [POST]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 2447, in wsgi_app\n",
+      "    response = self.full_dispatch_request()\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1952, in full_dispatch_request\n",
+      "    rv = self.handle_user_exception(e)\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1821, in handle_user_exception\n",
+      "    reraise(exc_type, exc_value, tb)\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\_compat.py\", line 39, in reraise\n",
+      "    raise value\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1950, in full_dispatch_request\n",
+      "    rv = self.dispatch_request()\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1936, in dispatch_request\n",
+      "    return self.view_functions[rule.endpoint](**req.view_args)\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\dash\\dash.py\", line 1273, in dispatch\n",
+      "    ctx.run(\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\dash\\_callback.py\", line 440, in add_context\n",
+      "    output_value = func(*func_args, **func_kwargs)  # %% callback invoked %%\n",
+      "  File \"C:\\Users\\hbpbn\\AppData\\Local\\Temp\\ipykernel_21392\\2481968748.py\", line 131, in get_graph\n",
+      "    df =  airline_data[airline_data['Year']==int(year)]\n",
+      "TypeError: int() argument must be a string, a bytes-like object or a number, not 'NoneType'\n",
+      "Exception on /_dash-update-component [POST]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 2447, in wsgi_app\n",
+      "    response = self.full_dispatch_request()\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1952, in full_dispatch_request\n",
+      "    rv = self.handle_user_exception(e)\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1821, in handle_user_exception\n",
+      "    reraise(exc_type, exc_value, tb)\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\_compat.py\", line 39, in reraise\n",
+      "    raise value\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1950, in full_dispatch_request\n",
+      "    rv = self.dispatch_request()\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1936, in dispatch_request\n",
+      "    return self.view_functions[rule.endpoint](**req.view_args)\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\dash\\dash.py\", line 1273, in dispatch\n",
+      "    ctx.run(\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\dash\\_callback.py\", line 440, in add_context\n",
+      "    output_value = func(*func_args, **func_kwargs)  # %% callback invoked %%\n",
+      "  File \"C:\\Users\\hbpbn\\AppData\\Local\\Temp\\ipykernel_21392\\2481968748.py\", line 131, in get_graph\n",
+      "    df =  airline_data[airline_data['Year']==int(year)]\n",
+      "TypeError: int() argument must be a string, a bytes-like object or a number, not 'NoneType'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [06/Apr/2023 12:39:37] \"POST /_dash-update-component HTTP/1.1\" 500 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exception on /_dash-update-component [POST]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 2447, in wsgi_app\n",
+      "    response = self.full_dispatch_request()\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1952, in full_dispatch_request\n",
+      "    rv = self.handle_user_exception(e)\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1821, in handle_user_exception\n",
+      "    reraise(exc_type, exc_value, tb)\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\_compat.py\", line 39, in reraise\n",
+      "    raise value\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1950, in full_dispatch_request\n",
+      "    rv = self.dispatch_request()\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1936, in dispatch_request\n",
+      "    return self.view_functions[rule.endpoint](**req.view_args)\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\dash\\dash.py\", line 1273, in dispatch\n",
+      "    ctx.run(\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\dash\\_callback.py\", line 440, in add_context\n",
+      "    output_value = func(*func_args, **func_kwargs)  # %% callback invoked %%\n",
+      "  File \"C:\\Users\\hbpbn\\AppData\\Local\\Temp\\ipykernel_21392\\2481968748.py\", line 131, in get_graph\n",
+      "    df =  airline_data[airline_data['Year']==int(year)]\n",
+      "TypeError: int() argument must be a string, a bytes-like object or a number, not 'NoneType'\n",
+      "Exception on /_dash-update-component [POST]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 2447, in wsgi_app\n",
+      "    response = self.full_dispatch_request()\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1952, in full_dispatch_request\n",
+      "    rv = self.handle_user_exception(e)\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1821, in handle_user_exception\n",
+      "    reraise(exc_type, exc_value, tb)\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\_compat.py\", line 39, in reraise\n",
+      "    raise value\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1950, in full_dispatch_request\n",
+      "    rv = self.dispatch_request()\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1936, in dispatch_request\n",
+      "    return self.view_functions[rule.endpoint](**req.view_args)\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\dash\\dash.py\", line 1273, in dispatch\n",
+      "    ctx.run(\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\dash\\_callback.py\", line 440, in add_context\n",
+      "    output_value = func(*func_args, **func_kwargs)  # %% callback invoked %%\n",
+      "  File \"C:\\Users\\hbpbn\\AppData\\Local\\Temp\\ipykernel_21392\\2481968748.py\", line 131, in get_graph\n",
+      "    df =  airline_data[airline_data['Year']==int(year)]\n",
+      "TypeError: int() argument must be a string, a bytes-like object or a number, not 'NoneType'\n",
+      "Exception on /_dash-update-component [POST]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 2447, in wsgi_app\n",
+      "    response = self.full_dispatch_request()\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1952, in full_dispatch_request\n",
+      "    rv = self.handle_user_exception(e)\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1821, in handle_user_exception\n",
+      "    reraise(exc_type, exc_value, tb)\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\_compat.py\", line 39, in reraise\n",
+      "    raise value\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1950, in full_dispatch_request\n",
+      "    rv = self.dispatch_request()\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1936, in dispatch_request\n",
+      "    return self.view_functions[rule.endpoint](**req.view_args)\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\dash\\dash.py\", line 1273, in dispatch\n",
+      "    ctx.run(\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\dash\\_callback.py\", line 440, in add_context\n",
+      "    output_value = func(*func_args, **func_kwargs)  # %% callback invoked %%\n",
+      "  File \"C:\\Users\\hbpbn\\AppData\\Local\\Temp\\ipykernel_21392\\2481968748.py\", line 131, in get_graph\n",
+      "    df =  airline_data[airline_data['Year']==int(year)]\n",
+      "TypeError: int() argument must be a string, a bytes-like object or a number, not 'NoneType'\n",
+      "Exception on /_dash-update-component [POST]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 2447, in wsgi_app\n",
+      "    response = self.full_dispatch_request()\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1952, in full_dispatch_request\n",
+      "    rv = self.handle_user_exception(e)\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1821, in handle_user_exception\n",
+      "    reraise(exc_type, exc_value, tb)\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\_compat.py\", line 39, in reraise\n",
+      "    raise value\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1950, in full_dispatch_request\n",
+      "    rv = self.dispatch_request()\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1936, in dispatch_request\n",
+      "    return self.view_functions[rule.endpoint](**req.view_args)\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\dash\\dash.py\", line 1273, in dispatch\n",
+      "    ctx.run(\n",
+      "  File \"C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\dash\\_callback.py\", line 440, in add_context\n",
+      "    output_value = func(*func_args, **func_kwargs)  # %% callback invoked %%\n",
+      "  File \"C:\\Users\\hbpbn\\AppData\\Local\\Temp\\ipykernel_21392\\2481968748.py\", line 131, in get_graph\n",
+      "    df =  airline_data[airline_data['Year']==int(year)]\n",
+      "TypeError: int() argument must be a string, a bytes-like object or a number, not 'NoneType'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [06/Apr/2023 12:43:42] \"POST /_dash-update-component HTTP/1.1\" 500 -\n",
+      "127.0.0.1 - - [06/Apr/2023 12:43:46] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Apr/2023 12:43:46] \"GET /_dash-component-suites/dash/dcc/async-graph.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Apr/2023 12:43:46] \"GET /_dash-component-suites/dash/dcc/async-plotlyjs.js HTTP/1.1\" 200 -\n",
+      "C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\plotly\\express\\_core.py:1637: FutureWarning:\n",
+      "\n",
+      "The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "\n",
+      "C:\\Users\\hbpbn\\anaconda3\\lib\\site-packages\\plotly\\express\\_core.py:1637: FutureWarning:\n",
+      "\n",
+      "The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "\n",
+      "127.0.0.1 - - [06/Apr/2023 12:44:00] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Apr/2023 12:44:32] \"POST /_dash-update-component HTTP/1.1\" 200 -\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import dash\n",
@@ -301,7 +538,7 @@
     "# Application layout\n",
     "app.layout = html.Div(children=[ html.H1(\n",
     "                                'US Domestic Airline Flights Performance', # Add title to the dashboard\n",
-    "                                style={'textAlign': 'center', 'color': 'blue', 'font-size': 24}),\n",
+    "                                style={'textAlign': 'center', 'color': 'black', 'font-size': 28}),\n",
     "    \n",
     "                                # Dropdown creation\n",
     "                                # Create an outer division \n",
